--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </form>
         </div>
         <div class="bottom">
-            <span>版权所有&nbsp&nbsp<a href="http://www.aape.org.cn/">农业农村部规划设计研究院</a> Copyright 2023</span>
+            <span>版权所有&nbsp&nbsp<a href="http://www.aape.org.cn/">研究院</a> Copyright 2023</span>
         </div>
     </div>
     
